--- a/website/static/oauth/bluesky/auth.html
+++ b/website/static/oauth/bluesky/auth.html
@@ -3,19 +3,23 @@
 <p>
   Authentication is complete. If this does not happen automatically, please
   close the window.
-  <script>
-    setTimeout(function () {
-      if (window.opener) {
-        window.opener.postMessage(
-          {
-            "flutter-web-auth-2": window.location.href,
-          },
-          window.location.origin
-        );
-      } else {
-        localStorage.setItem("flutter-web-auth-2", window.location.href);
-      }
-      window.close();
-    }, 1000);
-  </script>
 </p>
+<script>
+  function postAuthenticationMessage() {
+    const message = {
+      "flutter-web-auth-2": window.location.href,
+    };
+
+    if (window.opener) {
+      window.opener.postMessage(message, window.location.origin);
+      window.close();
+    } else if (window.parent && window.parent !== window) {
+      window.parent.postMessage(message, window.location.origin);
+    } else {
+      localStorage.setItem("flutter-web-auth-2", window.location.href);
+      window.close();
+    }
+  }
+
+  postAuthenticationMessage();
+</script>
